fix: 🐛 remove overflow-x

--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -101,3 +101,9 @@ p {
   min-height: 100vh;
   padding: 12rem 0 10rem;
 }
+
+html {
+  width: 100vw;
+  max-width: 100%;
+  overflow-x: hidden;
+}
